--- a/2.html
+++ b/2.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head><title> today plan</title>
 </head>   
 <style>
@@ -83,7 +83,7 @@ body {
 <ul id="menu">
 
 <center>
-<li><a href = "home.html">HOME</a></li>
+<li><a href = "homp.html">HOME</a></li>
 <li><a href = "Diary.html">Diary</a></li>
 </center>
 
