--- a/diary_2.html
+++ b/diary_2.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
     <head><title>2월</title>
     </head>
     <style>
@@ -35,7 +35,7 @@ body {
 <ul id="menu">
 
 <center>
-<li><a href = "home.html">HOME</a></li>
+<li><a href = "homp.html">HOME</a></li>
 <li><a href = "Diary.html">Diary</a></li>
 </center>
 
